src/components/Calculator.scss
.Calculator {
  width: 100%;
  height: 100%;
  display: grid;
  background: #ffffff;
  grid-gap: 0px;
  grid-template-areas:
    "text text text text"
    "operators operators operators operand" 
    "num-dot num-dot num-dot operand" 
    "num-dot num-dot num-dot operand" 
    "num-dot num-dot num-dot operand"
    "num-dot num-dot num-dot operand";
  & .grid-item {
    // display: flex;
    // align-items: center;
    // justify-content: center;
    width: 100%;
    height: 100%;
    font-size: 40px;
    &:focus {
      outline: none;
    }
  }
  & .operand {
    grid-area: operand;
    display: grid;
    grid-template-areas:
      "divide" 
      "multiply" 
      "minus" 
      "add"
      "equal";
    background: linear-gradient(40deg,#ffd86f,#fc6262);
  }
  & .operators {
    background: linear-gradient(40deg,#2096ff,#05ffa3);
    grid-area: operators;
    display: grid;
    grid-template-areas: 
    "reset negative percent";
  }
  & .numbers-dot {
    background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);
    display: grid;
    grid-area: num-dot;
    grid-template-areas:
    "num1 num2 num3" 
    "num4 num5 num6" 
    "num7 num8 num9"
    "num0 num0 dot";
  }
  & .text {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    background: #222222;
    color: #fefefe;
    grid-area: text;
    font-size: 40px;
    width: auto;
    height: auto;
    padding: 20px;
    padding-right: 40px;
    overflow-x: auto;
  }
  & .reset {
    grid-area: reset;
    // background: #cccccc;
    background: transparent;
    border-color: rgba(0, 0, 0, 0);
  }
  & .negative {
    grid-area: negative;
    // background: #cccccc;
    background: transparent;
    border-color: rgba(0, 0, 0, 0);
  }
  & .percent {
    grid-area: percent;
    // background: #cccccc;
    background: transparent;
    border-color: rgba(0, 0, 0, 0);
  }
  & .divide {
    grid-area: divide;
    // background: #ffbb33;
    background: transparent;
    border-color: rgba(0, 0, 0, 0);
  }
  & .multiply {
    grid-area: multiply;
    // background: #ffbb33;
    background: transparent;
    border-color: rgba(0, 0, 0, 0);
  }
  & .minus {
    grid-area: minus;
    // background: #ffbb33;
    background: transparent;
    border-color: rgba(0, 0, 0, 0);
  }
  & .add {
    grid-area: add;
    // background: #ffbb33;
    background: transparent;
    border-color: rgba(0, 0, 0, 0);
  }
  & .equal {
    grid-area: equal;
    // background: #ffbb33;
    background: transparent;
    border-color: rgba(0, 0, 0, 0);
  }
  & .dot {
    grid-area: dot;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num1 {
    grid-area: num1;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num2 {
    grid-area: num2;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num3 {
    grid-area: num3;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num4 {
    grid-area: num4;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num5 {
    grid-area: num5;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num6 {
    grid-area: num6;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num7 {
    grid-area: num7;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num8 {
    grid-area: num8;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num9 {
    grid-area: num9;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
  & .num0 {
    grid-area: num0;
    background: rgba(0, 0, 0, 0.1);
    border-color: rgba(0, 0, 0, 0);
  }
}

